# f2nf2p_virt

./: CMakeLists.txt  F2.cpp  fit_f2nf2p.py  minimizer-isospin.cpp  minimizer.cpp  plot_baryonrule.py  plot_cov.py  plot_emc.py  plot_emc_momfrac.py  plot_f2nf2p.py  plot_np1_off.py  plot_np1_off_isodep.py  plot_result.py  spec.cpp  specdeut.cpp  test-f2p-f2d.cpp  test-integral.cpp  test-sumrules.cpp
cmake_modules/: FindROOT.cmake
error/: CMakeLists.txt  contour-isodep.cpp  contour.cpp
exp_data/: f2d.txt  f2p.txt  marathon_prelim_emc.txt
include/: 2H_momDist.txt  F2.h  constants.h  spec.h  specdeut.h
minimizers/: CJOffshell.cpp  CMakeLists.txt  linearOffshell.cpp  minimizer-LC.cpp  minimizer-isodep-LC.cpp  minimizer-isodep.cpp  minimizer-linear-LC.cpp  minimizer-linear.cpp  minimizer.cpp
output/: h-3-integral.txt  h-3-isodep-LC-minimization.out  h-3-isodep-LC.txt  h-3-linear-minimization.out  h-3-linear.txt  h-3-minimization.out  h-3-newframework-constoff-LC-minimization.out  h-3-newframework-constoff-LC.txt  h-3-newframework-constoff-minimization.out  h-3-newframework-constoff.txt  h-3-newframework-isodep-minimization.out  h-3-newframework-isodep.txt  h-3-newframework-linearoff-LC-minimization.out  h-3-newframework-linearoff-LC.txt  h-3-newframework-linearoff-minimization.out  h-3-newframework-linearoff.txt  h-3-onlyNP-integral.txt  h-3-onlyNP-minimization.out  h-3-onlyNP.txt  h-3.txt  he-3-h-3-fromH3results-minimization.out  he-3-h-3-fromH3results.txt  he-3-h-3-fromHe3results-minimization.out  he-3-h-3-fromHe3results.txt  he-3-h-3-integral.txt  he-3-h-3-isodep-LC-minimization.out  he-3-h-3-isodep-LC.txt  he-3-h-3-linear-fixOffconsttoH3-minimization.out  he-3-h-3-linear-fixOffconsttoH3.txt  he-3-h-3-linear-fixOffshelltoH3-minimization.out  he-3-h-3-linear-fixOffshelltoH3.txt  he-3-h-3-linear-fixOffslopetoH3-minimization.out  he-3-h-3-linear-fixOffslopetoH3.txt  he-3-h-3-linear-minimization.out  he-3-h-3-linear-startfromH3-minimization.out  he-3-h-3-linear-startfromH3.txt  he-3-h-3-linear.txt  he-3-h-3-minimization.out  he-3-h-3-newframework-constoff-LC-minimization.out  he-3-h-3-newframework-constoff-LC.txt  (+33 more)
plots/: plot_baryonrule.py  plot_contours.py  plot_cov.py  plot_deut_emc.py  plot_emc.py  plot_emc_momfrac-deut.py  plot_emc_momfrac.py  plot_emc_noOff.py  plot_emc_points.py  plot_f2nf2p.py  plot_newcontour.py  plot_np1_off_isodep.py  plot_offshell.py  plot_spectral.py  plot_visualize.py  plot_wallyfig3.py  plot_xxalpha_map.py
plots/deuterium-data/: deut-bonus.txt  deut-cj15.txt  deut-conv-gt.txt  deut-conv-lt.txt  deut-kp.txt  deut-mst.txt  deut-prl.txt
tests/: CMakeLists.txt  convolution-deuterium.cpp  convolution-isodep.cpp  convolution-linear.cpp  convolution.cpp  f2bound.cpp  sumrules.cpp  test-integral-offLin.cpp  test-sumrules.cpp
writeup/: kinematic_writeup.tex
